Modifications on student view

--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -127,19 +127,19 @@
                         </div>
                         <div class="col">
                             <div class="row">
-                                <div class="col-md-auto">
+                                <div class="col">
                                     {{ form_widget(form.teachingCmClass) }}
                                     <label placeholder="Heures CM"></label>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-auto">
+                                <div class="col">
                                     {{ form_widget(form.teachingTdClass) }}
                                     <label placeholder="Heures TD"></label>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-auto">
+                                <div class="col">
                                     {{ form_widget(form.teachingTpClass) }}
                                     <label placeholder="Heures TP"></label>
                                 </div>
@@ -176,19 +176,19 @@
                         </div>
                         <div class="col">
                             <div class="row">
-                                <div class="col-md-auto">
+                                <div class="col">
                                     {{ form_widget(form.teachingCmHybridClass) }}
                                     <label placeholder="Heures CM"></label>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-auto">
+                                <div class="col">
                                     {{ form_widget(form.teachingTdHybridClass) }}
                                     <label placeholder="Heures TD"></label>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-auto">
+                                <div class="col">
                                     {{ form_widget(form.teachingTpHybridClass) }}
                                     <label placeholder="Heures TP"></label>
                                 </div>
@@ -207,13 +207,13 @@
                         </div>
                         <div class="col">
                             <div class="row">
-                                <div class="col-md-auto">
+                                <div class="col">
                                     {{ form_widget(form.teachingCmHybridDist) }}
                                     <label placeholder="Heures CM"></label>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-auto">
+                                <div class="col">
                                     {{ form_widget(form.teachingTdHybridDist) }}
                                     <label placeholder="Heures TD"></label>
                                 </div>
