“Reply to” field in sended emails.

--- a/app/Resources/views/email/advice.html.twig
+++ b/app/Resources/views/email/advice.html.twig
@@ -1,6 +1,9 @@
 <div>
     <p>
-        Bonjour,<br><br>
-        <a href="mailto:{{ user.email }}">{{ user.username }}</a> demande un avis sur le syllabus du cours « {{ courseTitle }} »
+        Bonjour,<br><br><br>
+        {{ user.username }} demande un avis sur le syllabus du cours « {{ courseTitle }} ».
+    </p>
+    <p>
+        Répondez simplement à ce courriel pour le lui faire parvenir.
     </p>
 <div>
