--- a/app/Resources/views/email/advice.txt.twig
+++ b/app/Resources/views/email/advice.txt.twig
@@ -2,5 +2,7 @@
 Bonjour,
 
 
-{{ user.username }} ({{ user.email }}) demande un avis sur le syllabus du cours « {{ courseTitle }} »
+{{ user.username }} demande un avis sur le syllabus du cours « {{ courseTitle }} ».
+
+Répondez simplement à ce courriel pour le lui faire parvenir.
 
