--- a/app/Resources/views/email/publication.html.twig
+++ b/app/Resources/views/email/publication.html.twig
@@ -1,6 +1,6 @@
 <div>
     <p>
-        Bonjour,<br><br>
+        Bonjour,<br><br><br>
         le syllabus du cours « {{ courseTitle }} » vient d'être publié par {{ user.username }}.
     </p>
     <p>
