--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -32,6 +32,14 @@
                 {% endif %}
             {% endfor %}
         {% endif %}
+
+        <h2 class="font-weight-bold">{{ course.title }}</h2>
+        <p class="font-italic text-right">
+            <small>
+                Dernière modification le {{ course.modificationDate|date('d/m/Y') }} à {{ course.modificationDate|date('H:i') }}.
+            </small>
+        </p>
+
         <!--
 
         NAV
@@ -79,43 +87,29 @@
 
         -->
         <div id="presentation" class="mt-4">
-            <div class="row mb-4">
-                <div class="col text-right">
-                    <small>
-                        Dernière modification le {{ course.modificationDate|date('d/m/Y') }} à {{ course.modificationDate|date('H:i:s') }}
-                    </small>
-                </div>
-            </div>
             <div class="row">
-                <div class="col-md-6">
-                    <div>
-                        <h5 class="font-weight-bold">{{ course.title }}</h5>
-                        <div class="row ">
-                            <div class="col-md d-flex align-items-center">
-                                {% set levelBeginnerColor = 'info'  %}
-                                {% set levelIntermediateColor = 'white'  %}
-                                {% set levelAdvancedColor = 'white'  %}
-                                {% set levelText = ''  %}
-                                {% if course.level == "beginner" %}
-                                    {% set levelText = 'Niveau débutant'  %}
-                                {% elseif course.level == "intermediate" %}
-                                    {% set levelIntermediateColor = 'info'  %}
-                                    {% set levelText = 'Niveau intermédiare'  %}
-                                {% elseif course.level == "advanced" %}
-                                    {% set levelIntermediateColor = 'info'  %}
-                                    {% set levelAdvancedColor = 'info'  %}
-                                    {% set levelText = 'Niveau avancé'  %}
-                                {% endif %}
-                                <i class="fas fa-circle text-{{ levelBeginnerColor }} rounded-circle border border-dark"></i>
-                                <i class="mx-1 fas fa-circle text-{{ levelIntermediateColor }} rounded-circle border border-dark"></i>
-                                <i class=" fas fa-circle text-{{ levelAdvancedColor }} rounded-circle border border-dark"></i>
-                                <span class="px-3 text-white">{{ levelText }}</span>
-                            </div>
-                            <div class="col-md d-flex align-items-center border-left border-dark">
-                                <span class="mx-3 text-white">Domaine disciplinaire : {{course.domain}}</span>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-md d-flex align-items-center">
+                    {% set levelBeginnerColor = 'info'  %}
+                    {% set levelIntermediateColor = 'white'  %}
+                    {% set levelAdvancedColor = 'white'  %}
+                    {% set levelText = ''  %}
+                    {% if course.level == "beginner" %}
+                        {% set levelText = 'Niveau débutant'  %}
+                    {% elseif course.level == "intermediate" %}
+                        {% set levelIntermediateColor = 'info'  %}
+                        {% set levelText = 'Niveau intermédiare'  %}
+                    {% elseif course.level == "advanced" %}
+                        {% set levelIntermediateColor = 'info'  %}
+                        {% set levelAdvancedColor = 'info'  %}
+                        {% set levelText = 'Niveau avancé'  %}
+                    {% endif %}
+                    <i class="fas fa-circle text-{{ levelBeginnerColor }} rounded-circle border border-dark"></i>
+                    <i class="mx-1 fas fa-circle text-{{ levelIntermediateColor }} rounded-circle border border-dark"></i>
+                    <i class=" fas fa-circle text-{{ levelAdvancedColor }} rounded-circle border border-dark"></i>
+                    <span class="px-3 text-white">{{ levelText }}</span>
+                </div>
+                <div class="col-md d-flex align-items-center border-left border-dark">
+                    <span class="mx-3 text-white">Domaine disciplinaire : {{course.domain}}</span>
                 </div>
                 <div class="col-md-6">
                     {% if parent is not empty and parentInfo is not empty %}
