Enabling “Responsive Font Size” (https://github.com/twbs/rfs).

--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -38,6 +38,7 @@
 $enable-rounded: false;
 $enable-shadows: false;
 $enable-print-styles: false;
+$enable-responsive-font-sizes: true;
 
 // General settings
 $gray-100: #f8f9fa;
