--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -603,7 +603,7 @@
 
         <div class="mt-5 border bg-dark text-center p-3">
             <small>
-                Ce syllabus est non contractuel, il est susceptible d'évoluer en cours d'année, restez vigilants aux dernières modifications (date de mise à jour affichée en haut à droite)
+                Ce syllabus est non contractuel, il est susceptible d'évoluer en cours d'année : soyez attentifs aux dernières modifications (la date de dernière mise à jour est affichée en haut à droite).
             </small>
         </div>
 
