Missing title for first section.

--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -87,6 +87,8 @@
 
         -->
         <section id="presentation" class="mt-4">
+            <h4 class="font-weight-bold">Présentation du cours</h4>
+            <hr class="border border-white bg-light" style="height: 2px;">
             <div class="row">
                 <div class="col-md d-flex align-items-center">
                     {% set levelBeginnerColor = 'info'  %}
