This is not a menu.

--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -78,6 +78,20 @@ footer {
     }
 }
 
+.bg-black nav {
+
+    @include media-breakpoint-up(md) {
+
+        .nav-link {
+            max-width: 8rem;
+        }
+    }
+
+    .nav-link.active {
+        background-color: $info;
+    }
+}
+
 
 
 /*
