--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -46,38 +46,15 @@
         NAV
 
         -->
-        <nav class="navbar navbar-expand-lg bg-info text-center">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#view_navbar" aria-controls="view_navbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="view_navbar">
-                <ul class="navbar-nav m-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#presentation">Présentation</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#objectives">Objectifs du cours</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#activities">Contenu et activités</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#evaluations">Modalités d'évaluation</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#equipments_resources">Matériel et ressources</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#information">Informations pratiques</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#regulation">Réglementation</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#closing">Mot de la fin</a>
-                    </li>
-                </ul>
-            </div>
+        <nav class="nav nav-pills flex-column flex-md-row" id="navbar-view">
+            <a class="flex-md-fill nav-link active" href="#presentation">Présentation</a>
+            <a class="flex-md-fill nav-link" href="#objectives">Objectifs du cours</a>
+            <a class="flex-md-fill nav-link" href="#activities">Contenu et activités</a>
+            <a class="flex-md-fill nav-link" href="#evaluations">Modalités d'évaluation</a>
+            <a class="flex-md-fill nav-link" href="#equipments_resources">Matériel et ressources</a>
+            <a class="flex-md-fill nav-link" href="#information">Informations pratiques</a>
+            <a class="flex-md-fill nav-link" href="#regulation">Réglementation</a>
+            <a class="flex-md-fill nav-link" href="#closing">Mot de la fin</a>
         </nav>
 
 
