--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -46,9 +46,11 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" href="#presentation">Présentation</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="#objectives">Objectifs du cours</a>
-                    </li>
+                    {% if courseInfoHelper.ObjectivesInfoAreEmpty(course) == false %}
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#objectives">Objectifs du cours</a>
+                        </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link text-light" href="#activities">Contenu et activités</a>
                     </li>
@@ -255,58 +257,66 @@
             COURSE OBJECTIVES
 
             -->
-            <div id="objectives" class="mt-5">
-                <h4 class="font-weight-bold">Objectifs du cours</h4>
-                <hr class="border border-white bg-light" style="height: 2px;">
-                <div id="objectives_achievements" class="mt-4">
-                    <h5 class="border border-info bg-light text-info rounded text-center p-2">ACQUIS D'APPRENTISSAGE</h5>
-                    <h6 class="text-center">A la fin de ce cours, je serai capable de…</h6>
+            {% if courseInfoHelper.ObjectivesInfoAreEmpty(course) == false %}
+                <div id="objectives" class="mt-5">
+                    <h4 class="font-weight-bold">Objectifs du cours</h4>
+                    <hr class="border border-white bg-light" style="height: 2px;">
+                    {% if courseInfoHelper.AchievementsObjectivesInfoAreEmpty(course) == false %}
+                        <div id="objectives_achievements" class="mt-4">
+                            <h5 class="border border-info bg-light text-info rounded text-center p-2">ACQUIS D'APPRENTISSAGE</h5>
+                            <h6 class="text-center">A la fin de ce cours, je serai capable de…</h6>
+                            <div class="row">
+                                {% for achievement in course.courseAchievements %}
+                                    {% if achievement.description is not null %}
+                                        <div class="col-md-6">
+                                            <div class="bg-info rounded-pill text-center p-2 my-2">
+                                                {{achievement.description}}
+                                            </div>
+                                        </div>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                        </div>
+                    {% endif %}
                     <div class="row">
-                        {% for achievement in course.courseAchievements %}
-                            {% if achievement.description is not null %}
-                                <div class="col-md-6">
-                                    <div class="bg-info rounded-pill text-center p-2 my-2">
-                                        {{achievement.description}}
-                                    </div>
+                        {% if courseInfoHelper.PrerequisitesObjectivesInfoAreEmpty(course) == false %}
+                            <div class="col-lg">
+                                <div id="objectives_prerequisites" class="mt-4">
+                                    <h5 class="border border-info bg-light text-info rounded text-center p-2">PRÉREQUIS</h5>
+                                    <h6 class="text-center">Avant de suivre ce cours, je dois…</h6>
+                                    {% for prerequisite in course.coursePrerequisites %}
+                                        {% if prerequisite.description is not null %}
+                                            <div class="bg-info rounded-pill text-center p-2 my-2">
+                                                {{prerequisite.description}}
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
                                 </div>
-                            {% endif %}
-                        {% endfor %}
+                            </div>
+                        {% endif %}
+                        {% if courseInfoHelper.TutoringObjectivesInfoAreEmpty(course) == false %}
+                            <div class="col-lg">
+                                <div id="objectives_tutoring" class="mt-4">
+                                    <h5 class="border border-info bg-light text-info rounded text-center p-2">REMÉDIATION / AIDE À LA RÉUSSITE</h5>
+                                    <h6 class="text-center">Si je rencontre des difficultés, je peux…</h6>
+                                    {% if courseInfoHelper.TutoringInfoObjectivesInfoAreEmpty(course) == false %}
+                                        <div class="bg-info rounded-pill text-center p-2 my-2">
+                                            {{course.tutoringDescription}}
+                                        </div>
+                                    {% endif %}
+                                    {% for resource in course.courseTutoringResources %}
+                                        {% if resource.description is not null %}
+                                            <div class="bg-info rounded-pill text-center p-2 my-2">
+                                                {{resource.description}}
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div id="objectives_prerequisites" class="mt-4">
-                            <h5 class="border border-info bg-light text-info rounded text-center p-2">PRÉREQUIS</h5>
-                            <h6 class="text-center">Avant de suivre ce cours, je dois…</h6>
-                            {% for prerequisite in course.coursePrerequisites %}
-                                {% if prerequisite.description is not null %}
-                                    <div class="bg-info rounded-pill text-center p-2 my-2">
-                                        {{prerequisite.description}}
-                                    </div>
-                                {% endif %}
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div id="objectives_tutoring" class="mt-4">
-                            <h5 class="border border-info bg-light text-info rounded text-center p-2">REMÉDIATION / AIDE À LA RÉUSSITE</h5>
-                            <h6 class="text-center">Si je rencontre des difficultés, je peux…</h6>
-                            {% if course.tutoringDescription != null %}
-                                <div class="bg-info rounded-pill text-center p-2 my-2">
-                                    {{course.tutoringDescription}}
-                                </div>
-                            {% endif %}
-                            {% for resource in course.courseTutoringResources %}
-                                {% if resource.description is not null %}
-                                    <div class="bg-info rounded-pill text-center p-2 my-2">
-                                        {{resource.description}}
-                                    </div>
-                                {% endif %}
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% endif %}
 
 
             <!--
